[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/paper_doll/PaperDoll.gd" type="Script" id=2]

[node name="PaperDoll" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="FrontPart" type="Sprite" parent="."]

[node name="FrontPartPosition" type="Position2D" parent="."]
